{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 1,
  "lineage": "e291263b-4a3a-e57c-366d-d83340a4ab99",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "res-16",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes/frontendIPConfigurations/a904ed7a-878b-408b-9853-61b6dad3c094",
                "name": "a904ed7a-878b-408b-9853-61b6dad3c094",
                "outbound_rules": [
                  "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes/outboundRules/aksOutboundRule"
                ],
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/publicIPAddresses/a904ed7a-878b-408b-9853-61b6dad3c094"
              },
              {
                "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes/frontendIPConfigurations/ad79f800b9a9446748c36c88e45bd72d",
                "load_balancer_rules": [
                  "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes/loadBalancingRules/ad79f800b9a9446748c36c88e45bd72d-TCP-8200"
                ],
                "name": "ad79f800b9a9446748c36c88e45bd72d",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/publicIPAddresses/kubernetes-ad79f800b9a9446748c36c88e45bd72d"
              }
            ],
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes",
            "location": "westeurope",
            "name": "kubernetes",
            "resource_group_name": "mc_vault_xsec_xsec_westeurope",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Production",
              "aks-managed-cluster-name": "Xsec",
              "aks-managed-cluster-rg": "Vault_Xsec"
            },
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "res-17",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Compute/virtualMachineScaleSets/aks-default-11516176-vmss/virtualMachines/0/networkInterfaces/aks-default-11516176-vmss/ipConfigurations/ipconfig1"
            ],
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes/backendAddressPools/aksOutboundBackendPool",
            "loadbalancer_id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes",
            "name": "aksOutboundBackendPool",
            "outbound_rules": [
              "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes/outboundRules/aksOutboundRule"
            ],
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "res-18",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Compute/virtualMachineScaleSets/aks-default-11516176-vmss/virtualMachines/0/networkInterfaces/aks-default-11516176-vmss/ipConfigurations/ipconfig1"
            ],
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes/backendAddressPools/kubernetes",
            "load_balancing_rules": [
              "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes/loadBalancingRules/ad79f800b9a9446748c36c88e45bd72d-TCP-8200"
            ],
            "loadbalancer_id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/loadBalancers/kubernetes",
            "name": "kubernetes",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-19",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41832928-nsg",
            "location": "westeurope",
            "name": "aks-agentpool-41832928-nsg",
            "resource_group_name": "mc_vault_xsec_xsec_westeurope",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "20.4.161.180",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8200",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ad79f800b9a9446748c36c88e45bd72d-TCP-8200-Internet",
                "priority": 500,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Production"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-20",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "20.4.161.180",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8200",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41832928-nsg/securityRules/ad79f800b9a9446748c36c88e45bd72d-TCP-8200-Internet",
            "name": "ad79f800b9a9446748c36c88e45bd72d-TCP-8200-Internet",
            "network_security_group_name": "aks-agentpool-41832928-nsg",
            "priority": 500,
            "protocol": "Tcp",
            "resource_group_name": "mc_vault_xsec_xsec_westeurope",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/publicIPAddresses/a904ed7a-878b-408b-9853-61b6dad3c094",
            "idle_timeout_in_minutes": 30,
            "ip_address": "20.101.244.141",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "a904ed7a-878b-408b-9853-61b6dad3c094",
            "resource_group_name": "MC_Vault_Xsec_Xsec_westeurope",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Production",
              "aks-managed-cluster-name": "Xsec",
              "aks-managed-cluster-rg": "Vault_Xsec",
              "aks-managed-type": "aks-slb-managed-outbound-ip"
            },
            "timeouts": {
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/publicIPAddresses/kubernetes-ad79f800b9a9446748c36c88e45bd72d",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.4.161.180",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "kubernetes-ad79f800b9a9446748c36c88e45bd72d",
            "resource_group_name": "mc_vault_xsec_xsec_westeurope",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Production",
              "k8s-azure-cluster-name": "kubernetes",
              "k8s-azure-service": "default/hcvault-ui"
            },
            "timeouts": {
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "res-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.244.0.0/24",
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/mc_vault_xsec_xsec_westeurope/providers/Microsoft.Network/routeTables/aks-agentpool-41832928-routetable/routes/aks-default-11516176-vmss000000____102440024",
            "name": "aks-default-11516176-vmss000000____102440024",
            "next_hop_in_ip_address": "10.224.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "mc_vault_xsec_xsec_westeurope",
            "route_table_name": "aks-agentpool-41832928-routetable",
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "res-11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/routeTables/aks-agentpool-41832928-routetable",
            "location": "westeurope",
            "name": "aks-agentpool-41832928-routetable",
            "resource_group_name": "MC_Vault_Xsec_Xsec_westeurope",
            "route": [
              {
                "address_prefix": "10.244.0.0/24",
                "name": "aks-default-11516176-vmss000000____102440024",
                "next_hop_in_ip_address": "10.224.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/virtualNetworks/aks-vnet-41832928/subnets/aks-subnet"
            ],
            "tags": {
              "Environment": "Production"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.224.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/virtualNetworks/aks-vnet-41832928/subnets/aks-subnet",
            "name": "aks-subnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MC_Vault_Xsec_Xsec_westeurope",
            "timeouts": {
            },
            "virtual_network_name": "aks-vnet-41832928"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-14",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/virtualNetworks/aks-vnet-41832928/subnets/aks-subnet",
            "network_security_group_id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41832928-nsg",
            "subnet_id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/virtualNetworks/aks-vnet-41832928/subnets/aks-subnet",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "res-15",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/virtualNetworks/aks-vnet-41832928/subnets/aks-subnet",
            "route_table_id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/routeTables/aks-agentpool-41832928-routetable",
            "subnet_id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/virtualNetworks/aks-vnet-41832928/subnets/aks-subnet",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.224.0.0/12"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b26b33ec-bbfa-48a9-8586-7f0183591aec",
            "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/virtualNetworks/aks-vnet-41832928",
            "location": "westeurope",
            "name": "aks-vnet-41832928",
            "resource_group_name": "MC_Vault_Xsec_Xsec_westeurope",
            "subnet": [
              {
                "address_prefix": "10.224.0.0/16",
                "id": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/virtualNetworks/aks-vnet-41832928/subnets/aks-subnet",
                "name": "aks-subnet",
                "security_group": "/subscriptions/1a0d078e-b0e6-432d-89c7-8a75cac664aa/resourceGroups/MC_Vault_Xsec_Xsec_westeurope/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41832928-nsg"
              }
            ],
            "tags": {
              "Environment": "Production"
            },
            "timeouts": {
            }
          }
        }
      ]
    }
  ]
}